--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -28,7 +28,9 @@
         <WebView
             android:id="@+id/webViewAbout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+
+            />
         <!--<com.example.ahmed.convertwebsitetoapp.view.CustomTextView-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
