--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,7 @@
     <color name="logo">#13a89e</color>
 
 
+    <color name="indigo">#c26eff</color>
+    <color name="pink">#ff748c</color>
+
 </resources>
