--- a/app/src/main/res/layout-ar/activity_login2.xml
+++ b/app/src/main/res/layout-ar/activity_login2.xml
@@ -23,10 +23,11 @@
             android:layout_height="wrap_content"
             android:onClick="btnForgotPassword"
             android:padding="15dp"
-            android:text="Forget password?"
+            android:text="نسيت كلمة المرور؟"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:layout_gravity="left"
 
             />
 
@@ -38,7 +39,7 @@
             android:layout_gravity="right"
             android:onClick="btnNewUser"
             android:padding="15dp"
-            android:text="New User"
+            android:text="إنشاء مستخدم جديد"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -88,9 +89,9 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_margin="10dp"
-                    android:drawableLeft="@drawable/account"
+                    android:drawableRight="@drawable/account"
                     android:drawablePadding="5dp"
-                    android:hint="Enter email"
+                    android:hint="أدخل البريد الاكتروني"
                     android:inputType="textEmailAddress"
                     android:padding="20dp"
                     android:textColor="@android:color/darker_gray"
@@ -115,11 +116,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/etUserEmail"
-                    android:layout_centerHorizontal="true"
                     android:layout_margin="10dp"
-                    android:drawableLeft="@drawable/id"
+                    android:drawableRight="@drawable/id"
                     android:drawablePadding="5dp"
-                    android:hint="Enter password"
+                    android:gravity="right"
+                    android:hint="أدخل كلمة المرور"
                     android:inputType="textPassword"
                     android:padding="20dp"
                     android:textColor="@android:color/darker_gray"
@@ -136,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/llUserPassword"
                 android:layout_margin="6dp"
-                android:text="Show password"
+                android:text="أظهر كلمة المرور"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
 
@@ -150,12 +151,13 @@
                 android:layout_margin="20dp"
                 android:background="@color/colorBlue6"
                 android:onClick="btnLogin"
-                android:text="login"
+                android:text="دخول"
                 android:textAllCaps="true"
                 android:textSize="20sp" />
 
         </LinearLayout>
     </ScrollView>
+
 
     <Button
         android:layout_width="fill_parent"
@@ -163,10 +165,12 @@
         android:layout_alignParentBottom="true"
         android:background="#FFFFFF"
         android:onClick="skip"
-        android:text="SKIP"
+        android:text="تخطي"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         android:alpha=".9"
         android:visibility="visible" />
+
+
 </RelativeLayout>
