--- a/app/src/main/res/menu/menu_order_more.xml
+++ b/app/src/main/res/menu/menu_order_more.xml
@@ -9,6 +9,12 @@
 
 
     <item
+        android:id="@+id/thereAreMoreSelected"
+        android:icon="@drawable/go_ahead2"
+        android:title="There are more items"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/socialFaceBook"
         android:icon="@drawable/facbook4"
         android:title="facebook"
