--- a/app/src/main/res/layout/activity_details_activty.xml
+++ b/app/src/main/res/layout/activity_details_activty.xml
@@ -13,15 +13,16 @@
 
         />
 
-    <ImageView
+    <com.example.ahmed.convertwebsitetoapp.view.CircleImageView
         android:id="@+id/iv"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:src="@drawable/service1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"
-
         android:layout_below="@+id/toolbar"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerInParent="true"
+
+        />
 
    <!-- <TextView
         android:layout_below="@id/iv"
