--- a/app/src/main/res/layout/contact_main_notloggedin.xml
+++ b/app/src/main/res/layout/contact_main_notloggedin.xml
@@ -14,10 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/ll2"
@@ -63,7 +63,7 @@
                         android:hint="Enter your name"
                         android:inputType="textPersonName"
                         android:padding="10dp"
-android:textSize="20sp"
+                        android:textSize="20sp"
 
                         />
                 </LinearLayout>
@@ -159,8 +159,7 @@ android:textSize="20sp"
                         android:hint="Enter message here ..."
                         android:padding="10dp"
 
-                        android:textSize="20sp"
-                        />
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
@@ -172,11 +171,11 @@ android:textSize="20sp"
                     android:layout_marginTop="1dp"
                     android:layout_weight="20"
                     android:background="@drawable/rounded_button"
+                    android:padding="10dp"
                     android:text="Send"
                     android:textColor="@android:color/black"
-                    android:textStyle="bold"
-                    android:padding="10dp"
                     android:textSize="20sp"
+                    android:textStyle="bold"
 
                     />
 
@@ -189,21 +188,20 @@ android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical"
             android:background="@color/gray2"
+            android:orientation="vertical"
 
             >
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="5dp"
                 android:text="7 El Bahrin St, 7th floor"
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:padding="5dp"
-                />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
