--- a/app/src/main/res/layout/activity_main_final.xml
+++ b/app/src/main/res/layout/activity_main_final.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tlMainContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    >
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
@@ -25,13 +24,11 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
-            app:menu="@menu/activity_main_drawer" />
-
-
-
+            app:menu="@menu/activity_main_drawer_not_logged" />
 
 
     </android.support.v4.widget.DrawerLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabChatting"
         android:layout_width="wrap_content"
