--- a/app/src/main/res/layout/my_projects.xml
+++ b/app/src/main/res/layout/my_projects.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
         android:visibility="gone"
+
 
         >
 
@@ -24,6 +25,7 @@
             />
 
     </android.support.design.widget.AppBarLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
@@ -31,22 +33,14 @@
         android:background="@android:color/white"
         android:visibility="gone"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <ListView
+        android:id="@+id/lvServices"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:divider="@color/colorBlue1"
+        android:dividerHeight="2dp"></ListView>
 
-        >
-
-        <ListView
-            android:id="@+id/lvServices"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@color/colorBlue1"
-            android:dividerHeight="2dp"
-
-            ></ListView>
-    </LinearLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabChatting"
         android:layout_width="wrap_content"
@@ -57,8 +51,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="5dp"
-        android:visibility="gone"
         android:layout_marginRight="5dp"
+        android:visibility="gone"
         app:srcCompat="@drawable/chatting" />
     <!--<LinearLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:orientation="vertical"--><!--android:visibility="gone"--><!--&gt;-->
 
