--- a/app/src/main/res/layout/order_now.xml
+++ b/app/src/main/res/layout/order_now.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
+    android:id="@+id/rlMainOrderNow"
     android:orientation="vertical">
 
     <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner-->
