--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -12,25 +12,20 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:scrollbars="vertical"-->
-        <!--android:textStyle="bold"-->
-        <!--android:textSize="20sp"-->
-        <!--android:padding="5dp"-->
-        <!--android:id="@+id/tvAbout"-->
-        <!--android:textColor="@color/errorRed"-->
-        <!--android:text="Ahmed Mohammed"-->
-        <!--android:background="@color/pf_light_gray"-->
-        <!--/>-->
-
-        <WebView
-            android:id="@+id/webViewAbout"
+        <TextView
+            android:id="@+id/tvAbout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
+
             />
+
+        <!--<WebView-->
+        <!--android:id="@+id/webViewAbout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+
+        <!--/>-->
         <!--<com.example.ahmed.convertwebsitetoapp.view.CustomTextView-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
