--- a/app/src/main/res/layout-ar/activity_details_activty.xml
+++ b/app/src/main/res/layout-ar/activity_details_activty.xml
@@ -23,6 +23,7 @@
 
         />
 
+
     <TextView
         android:id="@+id/tvDetailsServ"
         android:layout_width="match_parent"
@@ -35,7 +36,6 @@
 
 
         />
-
 
     <!-- <TextView
          android:layout_below="@id/iv"
@@ -52,11 +52,11 @@
 
     <!--<WebView-->
     <!--android:id="@+id/webView"-->
-    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_width="match_parent"-->
     <!--android:layout_height="wrap_content"-->
     <!--android:layout_alignParentBottom="true"-->
     <!--android:layout_below="@id/iv"-->
-    <!--style="?android:attr/webViewStyle"-->
+
 
     <!--/>-->
 
