--- a/app/src/main/res/layout/services.xml
+++ b/app/src/main/res/layout/services.xml
@@ -5,20 +5,27 @@
     <!--android:id="@+id/RecyclerView"-->
     <!--android:layout_height="match_parent"/>-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
     android:orientation="vertical"
 
     >
-    <ListView
+
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/pic1" />
+
+    <ListView
         android:id="@+id/lvServices"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:divider="@color/logo"
         android:dividerHeight="2dp"
-        android:background="@drawable/pic1"
+
         ></ListView>
 
 
