--- a/app/src/main/res/menu/activity_main_drawer_not_logged.xml
+++ b/app/src/main/res/menu/activity_main_drawer_not_logged.xml
@@ -30,8 +30,8 @@
 
             />
         <item
-            android:id="@+id/nav_sign_out"
-            android:title="@string/nav_sign_out"
+            android:id="@+id/nav_login"
+            android:title="@string/nav_login"
 
             />
 
